# py42

./: .editorconfig  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  .readthedocs.yml  CHANGELOG.md  CODECLASSIFICATION  CODEOWNERS  CONTRIBUTING.md  LICENSE.md  MANIFEST.in  README.md  departing_employee_bulk_add.csv  run_integration.py  setup.cfg  setup.py  tox.ini
.github/: PULL_REQUEST_TEMPLATE.md  build.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build.yml  cla.yml  docs.yml  publish.yml  style.yml
code42/api/: __init__.py  authority_api.py  storage_api.py
code42/http/: __init__.py  auth_handler.py  batch_async_session.py  generic_api.py  session.py
code42/lib/: secretproviders.py  sessionfactory.py  util.py
code42/sdk/: __init__.py  client_factory.py  sdk_client.py  sdkclient.py  sdkutil.py  storage_client_manager.py  storageclientmanager.py
code42/tools/: securityeventfetcher.py
code42/util/: common.py  constants.py  threadutils.py
docs/: conf.py  guides.md  index.md  index.rst  methods.md  sdk.md
docs/_templates/: layout.html
docs/methoddocs/: orgs.md  (+30 more)
integration/: conftest.py  test_alertrules.py  test_alerts.py  test_archive.py  test_detectionlists.py  test_devices.py  test_legalhold.py  test_orgs.py  test_securitydata.py  test_serveradmin.py  test_usercontext.py  test_users.py
py42/: __version__.py  debug.py  debug_level.py  settings.py  util.py
tests/: conftest.py  shared_test_utils.py  test_debug.py  test_exceptions.py  test_response.py  test_settings.py  test_usercontext.py  test_util.py
(+588 files in other folders)
